--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,26 +1,57 @@
-<%= link_to "Mindioso", root_path, :class => 'brand' %>
-<ul class="nav">
-  <% if user_signed_in? %>
-    <li>
-    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>        
-    </li>
-  <% else %>
-    <li>
-    <%= link_to 'Login', new_user_session_path %>  
-    </li>
-  <% end %>
-  <% if user_signed_in? %>
-    <li>
-    <%= link_to 'Edit account', edit_user_registration_path %>
-    </li>
-    <% if current_user.has_role? :admin %>
-      <li>
-      <%= link_to 'Admin', users_path %>
-      </li>
-    <% end %>
-  <% else %>
-    <li>
-    <%= link_to 'Sign up', new_user_registration_path %>
-    </li>
-  <% end %>
-</ul>
+<div class="row">
+  <div class="span4">
+    <%= link_to image_tag('logo_mindioso.png', :size => "210x80"), root_path %>
+  </div>
+
+  <div class="span8 pull-right">
+    <ul class="simple_breadcrumb pull-right">
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to 'Login', new_user_session_path %>
+        </li>
+      <% end %>
+
+      <% if user_signed_in? %>
+         <li>
+           <%= link_to 'Edit account', edit_user_registration_path %>
+         </li>
+      <% if current_user.has_role? :admin %>
+          <li>
+            <%= link_to 'Admin', users_path %>
+          </li>
+      <% end %>
+        <% else %>
+          <li>
+            <%= link_to 'Sign up', new_user_registration_path %>
+          </li>
+        <% end %>
+          <li><a href="#">Help</a> <span class="divider">&nbsp;</span></li>
+      </ul>
+  </div><!--! /span8 -->
+</div> <!--! /row -->
+
+<% if user_signed_in? %>
+  <div class="navbar">
+    <div class="navbar-inner">
+      <ul class="nav pull-right">
+        <li ><a href="#">Home</a></li>
+        <li class="divider-vertical"></li>
+        <li><a href="#">Budgets</a></li>
+        <li class="divider-vertical"></li>
+        <li><a href="#">Invoices</a></li>
+        <li class="divider-vertical"></li>
+        <li ><a href="#">Purchase Orders</a></li>
+        <li class="divider-vertical"></li>
+        <li><a href="#">Vendors</a></li>
+        <li class="divider-vertical"></li>
+        <li><a href="#">Contacts</a></li>
+        <li class="divider-vertical"></li>
+        <li><a href="#">Reports</a></li>
+      </ul>
+    </div>
+  </div>
+<% end %>
