--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,13 +13,27 @@
 */
 
 .content {
-  background-color: #eee;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+/*  background-color: #FBFBFB; */
+  background-color: #FFFFFD;
+  padding: 14px 20px;
+/*   margin: 0 -20px;  negative indent the amount of the padding to maintain the grid system */
+  margin: 0;
+  border: 1px solid #D4D4D4;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  border-radius: 4px 4px 4px 4px;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
+}
+
+.footer {
+    background-color: #F2F2F2;
+    border: 1px solid #D4D4D4;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    border-radius: 4px 4px 4px 4px;
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
+    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
 }
