Add and customize contacts scaffold

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -46,9 +46,9 @@
         <li class="divider-vertical"></li>
         <li ><a href="#">Purchase Orders</a></li>
         <li class="divider-vertical"></li>
-        <li><a href="#">Vendors</a></li>
+        <li><%= link_to "Vendors", vendors_path %></li>
         <li class="divider-vertical"></li>
-        <li><a href="#">Contacts</a></li>
+        <li><%= link_to "Contacts", contacts_path %></li>
         <li class="divider-vertical"></li>
         <li><a href="#">Reports</a></li>
       </ul>
