--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -30,7 +30,7 @@
       <div class="control-group">
         <%= f.label 'Vendor', :class => 'control-label' %>
         <div class="controls">
-          <%= f.text_field :first_name, :class => 'text_field' %>
+          <%= f.text_field :vendor_id, :class => 'text_field' %>
           <br />
           <%= link_to t('+ Add New Vendor'), new_vendor_path %>
         </div>
