--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -42,7 +42,7 @@
         <li class="divider-vertical"></li>
         <li><a href="#">Budgets</a></li>
         <li class="divider-vertical"></li>
-        <li><a href="#">Invoices</a></li>
+        <li><%= link_to "Invoices", invoices_path %></li>
         <li class="divider-vertical"></li>
         <li ><a href="#">Purchase Orders</a></li>
         <li class="divider-vertical"></li>
