--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -10,13 +10,13 @@
   <dd><%= @invoice.due %></dd>
 
   <dt><strong>Vendor</dt>
-  <dd><%= link_to (invoice.vendor.name), vendor_path(invoice.vendor) %></dd>
+  <dd><%= link_to (@invoice.vendor.name), vendor_path(@invoice.vendor) %></dd>
 
   <dt><strong>Memo</strong></dt>
   <dd><%= @invoice.memo %></dd>
 
   <dt><strong>Payment status</strong></dt>
-  <dd><% if @invoice.paid.active == true %>
+  <dd><% if @invoice.paid == true %>
       <%= 'Paid' %>
   <% else %>
       <%= 'Payment pending' %>
@@ -26,15 +26,7 @@
   <dt><strong>Amount due</strong></dt>
   <dd>Amount due</dd>
 
-
-
 </dl>
-
-
-
-
-
-
 
 <p>
   <b>Paid:</b>
@@ -46,12 +38,22 @@
   <%= @invoice.vendor_id %>
 </p>
 
+  <% for transaction in @invoice.transactions %>
+  <li><%= h transaction.item %></li>
+    <li>campaign</li>
+    <li><%= h transaction.category_id %></li>
+    <li><%= h transaction.memo %></li>
+    <li><%= h transaction.unitprice %></li>
+    <li><%= h transaction.quantity %></li>
+
+  <% end %>
+
+
+
 
 <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
-<%= link_to t('Delete', :default => t("helpers.links.destroy")),
-            invoice_path(@invoice),
-            :method => 'delete',
-            :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-            %> |
+
+<%= link_to 'Delete', invoice_path(@invoice), :method => 'delete', :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %> |
+
 <%= link_to 'Back', invoices_path %>
 
