--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,8 @@
-<h3>Users</h3>
+<div class="page-header">
+  <h1>Users</h1>
+</div>
+
+
 <ul class="users">
   <% @users.each do |user| %>
     <li>
