--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,11 @@
-<h3>User</h3>
-<p>User: <%= @user.name %></p>
+<div class="page-header">
+  <h1><%= @user.name %></h1>
+</div>
+
+
+<p>Name: <%= @user.name %></p>
 <p>Email: <%= @user.email if @user.email %></p>
+
+
+<%= link_to 'Edit', edit_user_registration_path(@user) %> |
+<%= link_to 'Back', users_path %>
