Adding static pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,23 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="page-header">
+<h1>About Us <small>A funny thing happened...</small></h1>
+</div>
+
+<h3>Life is too short to spend in Excel hell.</h3>
+
+<div class="row">
+	<div class="span7">
+
+		<p>One day, our CMO got sick and tired of pouring over budgets in Excel and trying to match up expenses
+		  to campaigns that were tracked in other marketing programs.  We had the campaign statistics so
+		  why did it have to be so freaking hard to match up the spend to calculate their ROIs?</p>
+
+	  <p>That's how the idea for Mindioso was born.</p>
+
+	  <p>Finally, marketers have a simple way to track marketing expenses.</p>
+
+		<p>Please <%= link_to 'let us know', contact_path %> how you like it and how we can make it even better for you.</p>
+	</div>
+
+
+  <div class="span3"></div>
+</div>
