--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<div class="page-header">
+<h1>Contact Us<small> Questions? Comments? </small></h1>
+</div>
+
+<blockquote>
+<h3>Mindioso</strong></h3>
+  <p>The Hartke Building<br />
+  11890 Sunrise Valley Drive<br />
+  Reston, VA 20191</p>
+
+	<p>(703) 740-0178</p>
+  <p>&nbsp;</p>
+	<p>Mindioso is a division of WhatsFun.com Inc.</p>
+
+</blockquote>
