--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,31 +6,28 @@
   <div class="span8 pull-right">
     <ul class="simple_breadcrumb pull-right">
       <% if user_signed_in? %>
-        <li>
-          <%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %>
-        </li>
+        <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
       <% else %>
-        <li>
-          <%= link_to 'Sign in', new_user_session_path %>
-        </li>
+        <li><%= link_to 'Sign in', new_user_session_path %></li>
       <% end %>
 
       <% if user_signed_in? %>
-         <li>
-           <%= link_to 'Edit account', edit_user_registration_path %>
-         </li>
-      <% if current_user.has_role? :admin %>
-          <li>
-            <%= link_to 'Admin', users_path %>
-          </li>
+        <li><%= link_to 'Edit account', edit_user_registration_path %></li>
+        <li><%= link_to 'Help', help_path %></li>
+
+          <% if current_user.has_role? :admin %>
+              <li><%= link_to 'Admin', users_path %></li>
+          <% end %>
+      <% else %>
+
+      <li><%= link_to 'Sign up', new_user_registration_path %></li>
+
       <% end %>
-        <% else %>
-          <li>
-            <%= link_to 'Sign up', new_user_registration_path %>
-          </li>
-        <% end %>
-          <li><a href="#">Help</a> <span class="divider">&nbsp;</span></li>
-      </ul>
+
+      <li><%= link_to 'About', about_path %></li>
+      <li><%= link_to 'Contact', contact_path %></li>
+
+    </ul>
   </div><!--! /span8 -->
 </div> <!--! /row -->
 
