--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,66 +1,99 @@
-<div class="page-header" xmlns="http://www.w3.org/1999/html">
+<div class="highlightbox">
+  <p class="uppernote"><< previous | next>></p>
   <h1>Invoice</h1>
+	  <div class="boxcontent">
+
+	    <table class="table">
+        <thead>
+          <tr>
+            <th><%= link_to (@invoice.vendor.name), vendor_path(@invoice.vendor) %></th>
+            <th><strong>Invoice #</strong> <%= link_to @invoice.id, edit_invoice_path(@invoice) %> </th>
+
+
+          </tr>
+        </thead>
+	      <tbody>
+	        <tr>
+	          <td>
+	            <p><strong>Billing Address</strong></p>
+              <p><% unless @invoice.vendor.pmtaddress.blank? %>
+                   <%= @invoice.vendor.pmtaddress %><br>
+                 <% end %>
+
+                 <% unless @invoice.vendor.pmtaddress1.blank? %>
+                   <%= @invoice.vendor.pmtaddress1 %><br>
+                 <% end %>
+
+                 <% unless @invoice.vendor.pmtcity.blank? %>
+                   <%= @invoice.vendor.pmtcity %>,
+                 <% end %>
+
+                 <% unless @invoice.vendor.pmtstate.blank? %>
+                  <%= @invoice.vendor.pmtstate  %>
+                 <% end %>
+
+                 <% unless @invoice.vendor.pmtzip.blank? %>
+                   <%= @invoice.vendor.pmtzip  %> <br>
+                 <% end %>
+
+                <% unless @invoice.vendor.pmtcountry.blank? %>
+                   <%= @invoice.vendor.pmtcountry %><br>
+                <% end %>
+              </p>
+	          </td>
+		        <td>
+		          <strong>Date issued</strong> <%= @invoice.issued %><br />
+                <p><strong>Date due</strong> <%= @invoice.due %><br />
+                <p><strong>Amount due</strong><%= @invoice.total %><br />
+                <p><strong>Payment Status</strong>
+                  <% if @invoice.paid == true %>
+                    <%= 'Paid' %>
+                  <% else %>
+                    <%= 'Payment pending' %>
+                  <% end %>
+		        </td>
+	        </tr>
+	        <tr><td><strong>Memo </strong>
+	          <p><%= @invoice.memo %></p></td></tr>
+	      </tbody>
+		  </table>
+
+	    <div class="clear"></div>
+
+	    <hr>
+	        <table class="table">
+	          <thead>
+	            <tr>
+	              <th>Item</th>
+	              <th>Campaign</th>
+	              <th>Category</th>
+	              <th>Memo</th>
+	              <th>Unit Price</th>
+	              <th>Quantity</th>
+	              <th>Amount</th>
+	            </tr>
+	          </thead>
+
+	          <tbody>
+	          <% for transaction in @invoice.transactions %>
+	            <tr>
+	              <td><%= h transaction.item %></td>
+	              <td>Campaign</td>
+	              <td><%= h transaction.category_id %></td>
+	              <td><%= h transaction.memo %></td>
+	              <td><%= h transaction.unitprice %></td>
+	              <td><%= h transaction.quantity %></td>
+	              <td><%= h transaction.amount %></td>
+	            </tr>
+	          <% end %>
+	          </tbody>
+	        </table>
+
+	</div>
+
 </div>
 
-<div class="row">
-  <div class="span6">
-    <p><strong><%= link_to (@invoice.vendor.name), vendor_path(@invoice.vendor) %></strong></p>
-    <p>billing address here</p>
-  </div>
-  <div class="span3">
-    <p><strong>Invoice #</strong> <%= @invoice.id %></p>
-    <p><strong>Date issued</strong> <%= @invoice.issued %></p>
-    <p><strong>Date due</strong> <%= @invoice.due %></p>
-    <p><strong>Amount due</strong><%= @invoice.total %></p>
-    <p><strong>Payment Status</strong>
-      <% if @invoice.paid == true %>
-        <%= 'Paid' %>
-      <% else %>
-        <%= 'Payment pending' %>
-      <% end %>
-    </p>
-  </div>
-</div>
-
-<hr>
-
-<div class=row>
-  <div class="span11">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Item</th>
-          <th>Campaign</th>
-          <th>Category</th>
-          <th>Memo</th>
-          <th>Unit Price</th>
-          <th>Quantity</th>
-          <th>Amount</th>
-        </tr>
-      </thead>
-
-      <tbody>
-      <% for transaction in @invoice.transactions %>
-        <tr>
-          <td><%= h transaction.item %></td>
-          <td>Campaign</td>
-          <td><%= h transaction.category_id %></td>
-          <td><%= h transaction.memo %></td>
-          <td><%= h transaction.unitprice %></td>
-          <td><%= h transaction.quantity %></td>
-          <td><%= h transaction.amount %></td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
-  </div>
-</div>
-
-
-
-
-
-
+  <div class="clear"></div>
 
 <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
 
