--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,7 +25,7 @@
       <% end %>
 
       <li><%= link_to 'About', about_path %></li>
-      <li><%= link_to 'Contact', contact_path %></li>
+      <li><%= link_to 'Contact', contactus_path %></li>
 
     </ul>
   </div><!--! /span8 -->
